--- a/app/src/main/res/layout/batch.xml
+++ b/app/src/main/res/layout/batch.xml
@@ -12,7 +12,7 @@
         android:weightSum="9">
 
         <TextView
-            android:id="@+id/textView1"
+            android:id="@+id/textViewDolar"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -22,7 +22,7 @@
             android:textSize="35dp" />
 
         <TextView
-            android:id="@+id/textView2"
+            android:id="@+id/textViewValue"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="2"
@@ -60,10 +60,11 @@
             android:layout_width="21dp"
             android:layout_height="21dp"
             android:layout_weight="1"
-            android:src="@drawable/car_logo" />
+            android:src="@drawable/car_logo"
+            android:layout_marginLeft="10dp"/>
 
         <TextView
-            android:id="@+id/textView10"
+            android:id="@+id/textViewMiles"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="2"
@@ -78,7 +79,7 @@
             android:src="@drawable/produce_logo" />
 
         <TextView
-            android:id="@+id/textView11"
+            android:id="@+id/textViewItemsUnits"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="4"
@@ -99,7 +100,8 @@
             android:layout_width="43dp"
             android:layout_height="43dp"
             android:layout_gravity="center"
-            android:src="@drawable/_shaws" />
+            android:src="@drawable/_shaws"
+            android:layout_marginLeft="20dp"/>
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -109,21 +111,23 @@
             android:weightSum="2">
 
             <TextView
-                android:id="@+id/textView12"
-                android:layout_width="wrap_content"
+                android:id="@+id/textViewTown"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="Xxxxxxxxxxxx, XX"
                 android:textColor="#000000"
-                android:textSize="16dp" />
+                android:textSize="18dp"
+                android:layout_marginLeft="18dp"/>
 
             <TextView
-                android:id="@+id/textView13"
-                android:layout_width="wrap_content"
+                android:id="@+id/textViewAddres"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="CVS Pharmacy 1030 PUTNAM AVENUE"
-                android:textSize="19dp" />
+                android:textSize="18dp"
+                android:layout_marginLeft="18dp"/>
 
         </LinearLayout>
 
