--- a/app/src/main/res/layout/batch_detail_info.xml
+++ b/app/src/main/res/layout/batch_detail_info.xml
@@ -8,7 +8,11 @@
     <SeekBar
         android:id="@+id/seekBar"
         android:layout_width="match_parent"
-        android:layout_height="137dp"
+        android:layout_height="80dp"
+        android:layout_alignParentBottom="true"
         android:layout_gravity="bottom"
-        android:layout_alignParentBottom="true"/>
+        android:thumb="@drawable/slider_seekba_003"
+        android:layout_marginLeft="25dp"
+        android:layout_marginRight="25dp"
+        android:layout_marginBottom="10dp"/>
 </RelativeLayout>
